--- a/community.html
+++ b/community.html
@@ -53,12 +53,14 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Discord</h1>
       <p>
-      <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a> —
-      A community of over 400 members who openly share their experiences and treatment outcomes, offer encouragement, and celebrate each other’s progress.
+      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us. Since we also live with hyperacusis, noxacusis, tinnitus, and TTTS, we can help newly affected patients navigate management strategies and treatment options.
+      </P>
+      <p>
+      <a class="link" href="https://discord.gg/TwqVrAQq" target="_blank" rel="noopener noreferrer">Hyperacusis Support Discord Server</a> — A community of over 400 members who share their personal experiences, treatment outcomes, and insights. <i>Hyperacusis Guide highly recommends this server.</i>
       </P>
       <p>
       <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a> —
-      A community of over 1,900 members focused on tinnitus and the treatment of tinnitus using a DIY adaptation of the Susan Shore device—originally developed at the University of Michigan but not yet commercially available. Members share treatment results and discuss related conditions such as hyperacusis, noxacusis, and TTTS.
+      A community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a>—originally developed at the University of Michigan but not yet commercially available. Members also discuss other auditory conditions, such as hyperacusis and noxacusis, and share the latest research.
       </p>
 
       
@@ -67,23 +69,23 @@
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/2271375819742791/" target="_blank" rel="noopener noreferrer">Hyperacusis Surgery Talk</a>  —
-      A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein procedure. Members exchange experiences, outcomes, and insights.
+      A community of over 1,300 members dedicated to the surgical management of hyperacusis, with a primary focus on the Silverstein procedure.
       </p>
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" rel="noopener noreferrer">Middle Ear Myoclonus (MEM) Support Group</a> —
-      A community of over 2,000 members focused on middle ear myoclonus, where people share experiences, coping strategies, and treatment results.
+      A community of over 2,000 members focused on the medical and surgical management of middle ear myoclonus (MEM) 
       </p>
 
       <p>
       <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" rel="noopener noreferrer">Tonic Tensor Tympani Syndrome (TTTS) Support Group</a>  —
-      A community of over 2,300 members dedicated to tonic tensor tympani syndrome (TTTS). Members connect to exchange personal experiences, discuss treatment approaches, and support one another in managing symptoms.
+      A community of over 2,300 members dedicated to the medical and surgical management of tonic tensor tympani syndrome (TTTS).
       </p>
 
       <div class="page-break" aria-hidden="true"></div>
-      <h1>Forums</h1
+      <h1>Forums</h1>
       <p>
-      When seeking hyperacusis advice on Reddit and other forums, it’s important to remain wary—many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
+      When seeking tinnitus and hyperacusis advice on Reddit and other forums, it’s important to remain wary—many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
       </p>
       <p>
       <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit - Hyperacusis</a>
@@ -95,7 +97,13 @@
       <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit - Tinnitus</a>
       </p>
       <p>
-      <a class="link" href="https://www.tinnitustalk.com/" target="_blank" rel="noopener noreferrer">Tinnitus Talk Forums</a>
+      <a class="link" href="https://www.tinnitustalk.com/" target="_blank" rel="noopener noreferrer">Tinnitus Talk</a>
+      </p>      
+
+      <div class="page-break" aria-hidden="true"></div>
+      <h1>Other Sites</h1>
+      <p>
+      <a class="link" href="https://hyperacusiscentral.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Central</a> - A collection of personal stories from those affected by hyperacusis, including many accounts of severe and life-altering cases.
       </p>      
       
     </article>
