--- a/contact.html
+++ b/contact.html
@@ -41,9 +41,13 @@
     <article>
   <h1>Contact</h1>
 
-  <p>If you have any questions, feedback, or suggestions, we’d love to hear from you. You can reach out to us using the contact details below, and we’ll do our best to respond as soon as possible. Whether you have general inquiries, collaboration ideas, or technical issues, we’re here to help.
+  <p>If you have any questions, feedback, or suggestions, we’d love to hear from you. You can reach out to us using the contact details below, and we’ll do our best to respond as soon as possible.
   
   </p>
+
+      <p>
+      <a class="link" href="https://discord.gg/6wWWwqxE" target="_blank" rel="noopener noreferrer">Hyperacusis Guide Discord Server</a> — This is our official server and the easiest way to reach us.
+      </P>
   </article>
   </main>
   
