--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h1>Precautionary Guide for New Hyperacusis Patients</h1>
 
       <p>
-        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will inevitably worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve.
+        At <i>Hyperacusis Guide</i>, we strongly disagree with the widespread narrative that isolating from sound will worsen hyperacusis symptoms. Many new sufferers often turn to platforms like Reddit, where the majority of the advice they receive encourages continuous exposure to sound with the expectation that their symptoms will improve.
       </p>
 
       <p>
@@ -69,17 +69,17 @@
       </p>
 
       <p>
-      It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological—an impression often reinforced by misinformation found online. 
+      It is common for family members to urge you to seek treatment when they see how much you are struggling. However, because severe hyperacusis is a rare and poorly understood condition, even well-meaning advice can be harmful. In some cases, families may assume the condition is purely psychological — an impression often reinforced by misinformation found online. 
       </p>
       <p>
-      <strong><i>**Remember that if someone pressures you to receive treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences—no one else experiences your suffering firsthand, and the most they can offer you is an apology.**
+      <strong><i>**Remember that if someone pressures you into treatment that exposes you to sound levels beyond your limits (Tinnitus Retraining Therapy (TRT), inpatient psychiatric treatment, etc.) resulting in a setback, you are the one who must live with the consequences — no one else experiences your suffering firsthand, and the most they can offer you is an apology.**
       </i></strong>
       </p>
 
       <p>
         While these measures may appear extreme, and some online or medical advice may suggest the opposite, hyperacusis and 
         related conditions remain poorly understood. Many individuals with severe symptoms report wishing they had adopted 
-        these precautions earlier. Taking careful measures upfront is far preferable to enduring irreversible consequences later.
+        these precautions earlier. Taking careful measures early on is far more preferable than enduring irreversible consequences later.
       </p>
 
       <h2>1. Controlled, Predictable Sound Environment</h2>
