--- a/mem.html
+++ b/mem.html
@@ -41,21 +41,28 @@
 
   <main>
     <article>
-      <h1>Middle Ear Myoclonus</h1>
+      <h1>Middle Ear Myoclonus (MEM)</h1>
 
       <p>
-        Middle ear myoclonus (MEM) involves involuntary, repetitive contractions of the tensor tympani and/or stapedius muscles, 
-        sometimes producing audible clicking or thumping sounds perceived by the patient or even an examiner. 
-        Both conditions are thought to arise from heightened central and peripheral auditory reflexes, often following 
-        acoustic trauma, stress, or prolonged sound sensitivity. 
+       Middle Ear Myoclonus (MEM) is a rare condition where one or both of the tiny muscles in the middle ear — the <strong>tensor tympani</strong> or <strong>stapedius</strong> — begin to contract on their own. These muscle spasms can create clicking, fluttering, or thumping sounds in one or both ears, and in some cases the sounds can even be heard by another person using a stethoscope. 
+       </p>
+       <p>
+       The exact cause isn’t always clear, but symptoms can be triggered or worsened by stress, sound exposure, muscle tension, or nerve irritation. Symptoms often come and go and can vary in intensity from day to day.
+
       </p>
 
-      <p>
-        In individuals with hyperacusis or noxacusis, the auditory system becomes hypersensitized,
-        and these protective reflexes can become maladaptive—firing excessively or continuously in response to normal
-        environmental sounds. Over time, this can reinforce a cycle of pain, muscle tension, and heightened auditory gain,
-        contributing to the persistence and severity of sound-induced discomfort.
-      </p>
+    <h2>Key features</h2>
+    <ul class="features">
+      <li><strong>Involuntary muscle contractions</strong> of the middle ear muscles — usually the tensor tympani or stapedius.</li>
+      <li><strong>Clicking, fluttering, or thumping</strong> sounds in one or both ears.</li>
+      <li>Sounds may be <strong>rhythmic or irregular</strong>, and vary in frequency or intensity.</li>
+      <li>May occur <strong>spontaneously</strong> or be triggered by sound, movement, stress, or tension.</li>
+      <li>Sometimes audible to others (a form of <em>objective tinnitus</em>).</li>
+      <li>Can cause a <strong>sensation of vibration or movement</strong> inside the ear.</li>
+      <li>Symptoms often <strong>come and go</strong>, lasting seconds to minutes or occurring in bursts throughout the day.</li>
+      <li>Associated with <strong>muscle irritability, nerve dysfunction,</strong> or anxiety-related muscle tension in some cases.</li>
+      <li>Typically diagnosed via <strong>clinical evaluation</strong> and by excluding other ear conditions.</li>
+    </ul>
 
       <p>
         The <a class="link" href="https://www.facebook.com/groups/middleearmyoclonus/" target="_blank" 
@@ -67,19 +74,33 @@
 
       <div class="page-break" aria-hidden="true"></div>
 
-      <h1>Tonic Tensor Tympani Syndrome</h1>
+    <h1>Tonic Tensor Tympani Syndrome (TTTS)</h1>
 
-      <p>
-        Tonic tensor tympani syndrome (TTTS) and middle ear myoclonus (MEM) are involuntary muscle disorders of the middle ear
-        that can closely overlap with, or develop secondary to, hyperacusis and noxacusis. 
-      </p>
+    <p class="lead">
+      Tonic Tensor Tympani Syndrome (TTTS) is a condition in which the 
+      <strong>tensor tympani muscle</strong> inside the middle ear becomes overactive or 
+      hypersensitive. This muscle normally contracts briefly in response to loud sounds 
+      or sudden noise to protect the inner ear, but in TTTS, it can tighten involuntarily 
+      or remain contracted for extended periods. 
+     </p>
+     <p>These muscle spasms can lead to 
+      sensations of pain, fullness, pressure, or fluttering in the ear, and may be triggered 
+      by everyday sounds that are not necessarily loud. TTTS is sometimes associated 
+      with conditions such as hyperacusis and acoustic shock.
+    </p>
 
-      <p>
-        In TTTS, the tensor tympani muscle—which normally contracts reflexively in response to loud sounds—becomes overactive 
-        or persistently tense, often triggered by even moderate noises or anticipation of sound. This chronic contraction can 
-        cause sensations of fullness, fluttering, pressure, or pain deep in the ear, and may exacerbate sound intolerance 
-        by increasing mechanical tension on the eardrum and ossicles.
-      </p>
+    <h2>Key features</h2>
+    <ul class="features">
+      <li><strong>Involuntary or prolonged contraction</strong> of the tensor tympani muscle in the middle ear.</li>
+      <li>Can cause sensations of <strong>pain, fullness, pressure, fluttering, or vibration</strong> in the affected ear.</li>
+      <li>Often <strong>triggered by sound, talking, chewing, or stress.</strong></li>
+      <li>May cause or worsen <strong>sound sensitivity (hyperacusis)</strong> or discomfort with noise.</li>
+      <li>Can lead to <strong>ear pain or tension</strong> without evidence of middle ear infection.</li>
+      <li>Some individuals report <strong>fluttering sounds</strong> that resemble a spasm or internal vibration.</li>
+      <li>Symptoms often fluctuate and may appear or worsen after <strong>sound exposure</strong> or <strong>acoustic trauma</strong>.</li>
+      <li>Believed to involve <strong>overactivation of the middle ear reflex</strong> and increased muscle excitability.</li>
+      <li>Diagnosis is primarily <strong>clinical</strong>, based on symptoms and ruling out other ear disorders.</li>
+    </ul>
 
       <p>
         The <a class="link" href="https://www.facebook.com/groups/503100723229728/" target="_blank" 
@@ -91,93 +112,83 @@
 
       <div class="page-break" aria-hidden="true"></div>
 
-      <h1>Differences Between MEM & TTTS</h1>
+    <h1>Conservative Management</h1>
 
-      <p>
-        Tonic tensor tympani syndrome (TTTS) and middle ear myoclonus (MEM) are related but distinct conditions, 
-        and TTTS is not generally considered a form of MEM, though they both involve abnormal middle ear muscle activity.
-      </p>
+    <p class="lead">
+      For many individuals with Middle Ear Myoclonus (MEM) or 
+      Tonic Tensor Tympani Syndrome (TTTS), conservative management is 
+      often the first approach. These strategies focus on reducing triggers, easing 
+      muscle tension, and improving sound tolerance. While results vary, many patients 
+      experience relief through non-invasive techniques, lifestyle adjustments, and sound therapy.
+    </p>
 
-      <ul>
-        <li>
-          Middle Ear Myoclonus (MEM): Involves <strong>involuntary, rhythmic contractions</strong> of the middle ear muscles—
-          typically the stapedius and/or tensor tympani—that produce audible clicking 
-          or fluttering sounds in the ear. It is usually classified as a myoclonic disorder.  Sometimes, the involuntary clicking may be perceptible to an observer positioned close to the patient’s ear.
-        </li>
-        <li>
-          Tonic Tensor Tympani Syndrome (TTTS): Involves a <strong>sustained, non-rhythmic contraction</strong> 
-          of the tensor tympani muscle, often triggered by stress, anxiety, or loud sounds. Symptoms include 
-          ear fullness, tinnitus, or a sense of pressure, but it usually does not produce the rhythmic clicking
-          characteristic of MEM.
-        </li>
-      </ul>
-
-      <p>
-        While both disorders involve the middle ear muscles, MEM is typically rhythmic and myoclonic, whereas TTTS is sustained and tonic. 
-        They are sometimes discussed together because they can coexist or produce overlapping symptoms, but TTTS is considered a separate clinical entity.
-      </p>
-
-      <p>
-        <strong>Tonic tensor tympani syndrome (TTTS) is more closely associated with hyperacusis and noxacusis</strong>, 
-        as sustained contraction of the tensor tympani muscle can lead to heightened sound sensitivity and discomfort. 
-        Middle ear myoclonus (MEM), by contrast, often times occurs spontaneously without preceding acoustic trauma and may be irritating 
-        but generally does not cause the widespread sound intolerance seen in TTTS.
-      </p>
+    <h2>Conservative Management Strategies</h2>
+    <ul class="management">
+      <li><strong>Sound therapy:</strong> Using low-level background noise to reduce hypersensitivity. <i>Note that sound therapy should be used with caution, especially in patients who also suffer from hyperacusis.</i></li>
+      <li><strong>Stress management & relaxation:</strong> Techniques such as deep breathing, meditation, or yoga to reduce muscle tension.</li>
+      <li><strong>Jaw, neck, and ear exercises:</strong> Gentle stretches and exercises to relieve tensor tympani or stapedius tension.</li>
+      <li><strong>Avoiding auditory triggers:</strong> Limiting exposure to loud or sudden noises that may provoke symptoms.</li>
+      <li><strong>Sleep hygiene:</strong> Ensuring adequate rest to reduce fatigue-related exacerbation of symptoms.</li>
+      <li><strong>Posture improvement:</strong> Maintaining good neck and shoulder posture to decrease muscular strain affecting the middle ear.</li>
+      <li><strong>Biofeedback or cognitive techniques:</strong> Learning to consciously relax ear muscles or reduce hypervigilance to sound.</li>
+      <li><strong>Use of ear protection when necessary:</strong> In situations with unavoidable loud noise, but avoiding overprotection to prevent sound sensitivity worsening.</li>
+      <li><strong>Gradual sound exposure:</strong> Slowly increasing exposure to sounds to build tolerance without triggering spasms.</li>
+    </ul>
 
       <div class="page-break" aria-hidden="true"></div>
 
-      <h1>Conservative Management</h1>
+    <h1>Medical Management</h1>
 
-      <p> 
-        Conservative management of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS) focuses on non-surgical approaches 
-        to alleviate symptoms and improve quality of life. 
-      </p>
-      
-      <p>
-        Common strategies include sound therapy, counseling, stress reduction techniques, 
-        and the use of hearing protection or masking devices to minimize the perception of involuntary muscle contractions. Some patients 
-        benefit from muscle relaxation exercises, biofeedback, or medications aimed at reducing muscle hyperactivity or anxiety. These 
-        approaches are often tailored to the individual, emphasizing symptom management and functional improvement while avoiding 
-        the risks associated with surgical intervention.
-      </p>
+    <p class="lead">
+      For individuals with more persistent or severe symptoms of 
+      Middle Ear Myoclonus (MEM) or 
+      Tonic Tensor Tympani Syndrome (TTTS), medical management may 
+      be recommended. This typically involves medications to reduce muscle spasms, 
+      inflammation, or anxiety, and in select cases, minor procedures. Medical strategies 
+      are usually combined with conservative measures to maximize symptom relief.
+    </p>
+
+    <h2>Medical Management Strategies</h2>
+    <ul class="management">
+      <li><strong>Muscle relaxants:</strong> Medications to reduce involuntary tensor tympani or stapedius contractions.</li>
+      <li><strong>Anti-anxiety medications:</strong> Used if stress or anxiety is contributing to symptoms.</li>
+      <li><strong>Anti-seizure or nerve-stabilizing medications:</strong> Sometimes prescribed to control abnormal nerve signals to middle ear muscles.</li>
+      <li><strong>Anti-inflammatory medications:</strong> Short-term use if inflammation is suspected to aggravate muscle spasms.</li>
+      <li><strong>Botulinum toxin injections:</strong> In select cases, tiny injections into the affected middle ear muscles to reduce spasm.</li>
+      <li><strong>Hearing protection & counseling:</strong> To avoid sound triggers while still maintaining gradual sound exposure therapy.</li>
+      <li><strong>Combination therapy:</strong> Often used alongside conservative management like sound therapy, relaxation, and jaw/neck exercises.</li>
+      <li><strong>Monitoring & follow-up:</strong> Regular evaluation by an ENT or audiologist to track progress and adjust treatment.</li>
+    </ul>
 
       <p>
-        Medications used for the treatment of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS) are generally aimed 
-        at reducing muscle hyperactivity, alleviating symptoms such as tinnitus and ear tension, and managing contributing factors 
-        like anxiety or stress. 
-      </p>
-      
-      <p>
-        Medications that have been tried include muscle relaxants, anti-anxiety agents, benzodiazepines, 
-        low-dose tricyclic antidepressants, and occasionally anticonvulsants. <strong>Extreme caution is advised when using medications</strong>, 
-        as symptom relief is often temporary, and there is a significant risk of developing dependency or other adverse effects. 
-        For this reason, pharmacologic therapy is typically considered an adjunct to other conservative or procedural treatments rather than a long-term solution.
-      </p>
+      <a class="link" href="https://docs.google.com/spreadsheets/d/1-ePvJPk4BhBeoOBKPc1gmXriXd4TYD7Z8n3yyEMoy5I/edit?usp=sharing" target="_blank" rel="noopener noreferrer">Medication, Botox, and Paper Patching Spreadsheet</a> — There are several patients in this spreadsheet who have detailed their experiences treating Tonic Tensor Tympani Syndrome (TTTS) and Middle Ear Myoclonus (MEM) using medications and Botox.
+      </P>
 
       <div class="page-break" aria-hidden="true"></div>
 
-      <h1>TVP Botox</h1>
+    <h1>Surgical Management</h1>
 
-      <p>
-        The use of tensor veli palatini (TVP) Botox injections has emerged as a potential management option for tonic tensor tympani syndrome (TTTS) 
-        and related middle ear muscle disorders. By temporarily weakening the overactive muscles, Botox can reduce involuntary contractions, ear tension, 
-        and associated tinnitus or clicking. The procedure is minimally invasive and typically performed in a clinical setting, with effects 
-        lasting several weeks to months. While not a permanent solution, TVP Botox can provide symptomatic relief for patients who do not 
-        respond adequately to conservative therapies and may serve as a bridge to more definitive treatment options.
-      </p>
+    <p class="lead">
+      In rare cases where symptoms of Middle Ear Myoclonus (MEM) or 
+      Tonic Tensor Tympani Syndrome (TTTS) are severe and do not respond 
+      to conservative or medical management, surgical options may be considered. Surgical 
+      interventions aim to reduce or eliminate involuntary muscle contractions in the middle 
+      ear while preserving hearing. These procedures are typically considered only after 
+      careful evaluation by an experienced ENT surgeon.
+    </p>
 
-      <div class="page-break" aria-hidden="true"></div>
+    <h2>Surgical Management Strategies</h2>
+    <ul class="management">
+      <li><strong>Tenotomy of the tensor tympani:</strong> Cutting or partially releasing the tensor tympani muscle to stop involuntary contractions.</li>
+      <li><strong>Stapedius tendon section:</strong> In select cases, surgically releasing or modifying the stapedius tendon to relieve spasms.</li>
+      <li><strong>Micro-surgical myotomy:</strong> Targeted surgical intervention to reduce hyperactive middle ear muscle activity.</li>
+      <li><strong>Middle ear exploration:</strong> Carefully assessing middle ear anatomy to rule out other structural causes and allow precise intervention.</li>
+      <li><strong>Hearing preservation focus:</strong> All surgical procedures aim to minimize risk to hearing while addressing muscle dysfunction.</li>
+      <li><strong>Post-surgical follow-up:</strong> Monitoring recovery and symptoms, sometimes combined with sound therapy or rehabilitation exercises.</li>
+      <li><strong>Reserved for refractory cases:</strong> Surgery is generally only recommended when all other treatments have failed.</li>
+    </ul>
 
-      <h1>Surgical Management</h1>
 
-      <p> 
-        The surgical management of middle ear myoclonus (MEM) and tonic tensor tympani syndrome (TTTS) is typically considered for patients 
-        whose symptoms—such as pulsatile clicking, ear fullness, or tinnitus—are severe and unresponsive to conservative treatments. 
-        Procedures often involve selective sectioning/tenotomy or myectomy of the affected middle ear muscles, such as the tensor tympani or stapedius, 
-        to reduce involuntary contractions. Surgery requires careful evaluation by an experienced otologic surgeon, as it carries risks 
-        including hearing changes or persistent symptoms, but for appropriately selected patients, it can provide significant relief 
-        and improvement in quality of life.
-      </p>
     </article>
   </main>
   
