--- a/tinnitus.html
+++ b/tinnitus.html
@@ -39,77 +39,85 @@
 
   <main>
     <article>
-      <h1>Tinnitus</h1>
-      <p>
-        Tinnitus is the perception of sound—often described as ringing, buzzing,
-        hissing, or humming—in the absence of an external source. It arises from
-        abnormal activity within the auditory system, typically following noise
-        exposure, otologic injury, or neural dysfunction. 
-      </p>
-      <p>While tinnitus and
-        hyperacusis are distinct conditions, they frequently occur together and
-        may share underlying mechanisms such as increased central auditory gain,
-        neural hyperactivity, or damage to cochlear nerve fibers. In many
-        patients, the presence of tinnitus reflects maladaptive changes in how
-        the brain interprets reduced or distorted auditory input, similar to how
-        hyperacusis represents an over-amplified response to external sounds.
-      </p>
-      <p>
-        The combination of tinnitus and hyperacusis can be particularly
-        distressing—one producing internal noise and the other heightening
-        external sound perception—leading to anxiety, sleep disturbance, and
-        reduced quality of life. Stabilizing the auditory environment, avoiding
-        further acoustic trauma, and supporting the nervous system’s recovery
-        are key components in managing both conditions.
-      </p>
+     <h1>Tinnitus</h1>
+
+    <p class="lead">
+      <strong>Tinnitus</strong> is the perception of sound in the ears or head without an external source. 
+      It can manifest as ringing, buzzing, hissing, clicking, or other noises. Tinnitus can be 
+      temporary or chronic, mild or severe, and may affect one or both ears. While it is often 
+      associated with hearing loss, it can also occur in individuals with normal hearing. The 
+      exact cause of tinnitus varies and can include exposure to loud sounds, ear infections, 
+      certain medications, or neurological factors.
+    </p>
+
+    <h2>Key Features</h2>
+    <ul class="features">
+      <li>Perception of sound without an external source (ringing, buzzing, hissing, or clicking).</li>
+      <li>Can affect one ear (unilateral) or both ears (bilateral).</li>
+      <li>May be continuous, intermittent, or pulsatile (rhythmic with heartbeat).</li>
+      <li>Severity ranges from mild awareness to significant disruption of daily life and sleep.</li>
+      <li>Often associated with hearing loss, noise exposure, or ear injury.</li>
+      <li>May be accompanied by ear fullness, discomfort, or hyperacusis (sound sensitivity).</li>
+      <li>Triggers can include stress, fatigue, medications, or sudden changes in auditory input.</li>
+      <li>Diagnosis is primarily clinical, often involving audiological testing and medical evaluation.</li>
+      <li>Management may include sound therapy, counseling, stress reduction, or medical interventions.</li>
+    </ul>
       <div class="page-break" aria-hidden="true"></div>
-      <h1>Tinnitus Retraining Therapy</h1>
 
-      <p>
-Tinnitus Retraining Therapy (TRT) was developed by <a class="link" href="https://www.pluralpublishing.com/author/pawel-j-jastreboff?srsltid=AfmBOoqFHye1HR7-vnnulHIxfvKqJhJyRzC23MXEl3E8BM3LJBKdejiD" target="_blank" 
-        rel="noopener noreferrer">Dr. Pawel Jastreboff</a> as a method intended to help individuals habituate to the perception of tinnitus. The approach combines sound therapy—using low-level background noise to reduce the contrast between tinnitus and ambient sound—with counseling aimed at reducing the emotional and attentional impact of tinnitus.</p>
-<p>
-While TRT has been widely promoted and adopted in clinical practice, systematic reviews and high-quality studies have not demonstrated consistent evidence that it provides significant or reliable benefit. <strong><i>Despite its theoretical appeal, there is currently no strong scientific data confirming that TRT effectively reduces tinnitus perception or improves long-term outcomes.</i></strong>
-     </p>
-  
-     <p>The main components of Tinnitus Retraining Therapy (TRT) are outlined below. TRT typically combines sound enrichment, counseling, and strategies aimed at habituating the brain to tinnitus.</p>
+    <h1>Tinnitus Retraining Therapy (TRT)</h1>
 
-<ul>
-  <li><strong>Sound Therapy:</strong>
-    <ul>
-      <li>Uses low-level background noise (often white noise or environmental sounds) to partially mask tinnitus.</li>
-      <li>Reduces the contrast between tinnitus and ambient sound, aiming to make the tinnitus less noticeable.</li>
+    <p class="lead">
+      Tinnitus Retraining Therapy (TRT) is a structured approach designed to help 
+      individuals habituate to tinnitus and reduce its impact on daily life. Developed by <a class="link" href="https://www.pluralpublishing.com/author/pawel-j-jastreboff?srsltid=AfmBOoqFHye1HR7-vnnulHIxfvKqJhJyRzC23MXEl3E8BM3LJBKdejiD" target="_blank" 
+        rel="noopener noreferrer">Dr. Pawel Jastreboff</a>, TRT combines <strong>counseling</strong> to reframe the perception of 
+      tinnitus with <strong>sound therapy</strong> to promote auditory desensitization. The goal 
+      is not to eliminate the tinnitus entirely, but to make it less noticeable and distressing over time.
+    </p>
+
+    <h2>Key Features</h2>
+    <ul class="features">
+      <li>Based on the neurophysiological model of tinnitus, which links perception and emotional response.</li>
+      <li>Combines <strong>educational counseling</strong> with <strong>sound therapy</strong>.</li>
+      <li>Sound therapy uses low-level background noise to reduce the contrast between tinnitus and the environment.</li>
+      <li>Emphasizes <strong>habituation</strong>, teaching the brain to ignore tinnitus signals.</li>
+      <li>Structured program usually lasts several months to years, depending on severity and response.</li>
+      <li>Individualized to each patient’s hearing profile, tinnitus characteristics, and lifestyle.</li>
+      <li>Requires active participation and consistent use of sound therapy devices or environmental sound adjustments.</li>
+      <li>Generally considered safe and non-invasive, with minimal side effects.</li>
+      <li>Effectiveness is greater for patients with realistic expectations and commitment to the therapy plan.</li>
     </ul>
-  </li>
-  
-  <li><strong>In-Ear Sound Therapy Devices:</strong>
-    <ul>
-      <li>Small devices worn in the ear that deliver continuous low-level white noise directly into the ear.</li>
-      <li>Designed to provide consistent sound enrichment and facilitate habituation to tinnitus.</li>
+
+<p class="lead">
+While Tinnitus Retraining Therapy (TRT) is widely used and promoted, there is currently 
+<strong>limited scientific evidence</strong> to conclusively demonstrate its effectiveness. 
+Clinical studies have produced mixed results, and some reviews suggest that benefits may be 
+largely due to <strong>placebo effects, counseling support, or natural habituation</strong> 
+over time rather than the sound therapy itself. Patients considering TRT should be aware that 
+outcomes can vary and that rigorous, large-scale studies supporting its efficacy remain scarce.
+</p>
+      <div class="page-break" aria-hidden="true"></div>
+    <h1>Cognitive Behavioral Therapy (CBT)</h1>
+
+    <p class="lead">
+      Cognitive Behavioral Therapy (CBT) is a psychological approach that helps 
+      individuals manage the distress, anxiety, and negative emotional responses associated with 
+      tinnitus and hyperacusis. While CBT does not directly reduce 
+      the perceived sound or sensitivity, it aims to improve coping strategies, reduce stress, and 
+      change unhelpful thought patterns that can worsen symptom perception. CBT is often used in 
+      combination with other therapies, such as sound therapy or counseling, to enhance overall quality of life.
+    </p>
+
+    <h2>Key Features and Benefits of CBT</h2>
+    <ul class="features">
+      <li>Helps patients identify and modify negative thoughts and beliefs about tinnitus or sound sensitivity.</li>
+      <li>Reduces anxiety, stress, and emotional distress associated with chronic auditory symptoms.</li>
+      <li>Teaches coping strategies to improve tolerance of sounds that trigger discomfort.</li>
+      <li>May improve sleep quality, concentration, and overall daily functioning.</li>
+      <li>Often combined with sound therapy, relaxation techniques, and lifestyle adjustments.</li>
+      <li>Delivered individually, in groups, or via online programs and guided self-help materials.</li>
+      <li>Focuses on long-term habituation and reducing the perceived impact of tinnitus and hyperacusis on daily life.</li>
+      <li>Evidence shows CBT can significantly reduce tinnitus-related distress even if the perceived sound remains unchanged.</li>
     </ul>
-  </li>
-  
-  <li><strong>Counseling / Educational Component:</strong>
-    <ul>
-      <li>Helps patients understand the auditory system and the mechanisms behind tinnitus.</li>
-      <li>Aims to reduce fear, stress, and negative emotional responses associated with tinnitus.</li>
-    </ul>
-  </li>
-  
-  <li><strong>Habituation Goal:</strong>
-    <ul>
-      <li>Seeks to retrain the brain to gradually ignore the tinnitus signal.</li>
-      <li>Encourages the auditory system to perceive tinnitus as a neutral, non-threatening sound over time.</li>
-    </ul>
-  </li>
-  
-  <li><strong>Long-Term, Daily Use:</strong>
-    <ul>
-      <li>Sound therapy devices are typically worn for many hours per day.</li>
-      <li>Counseling sessions may continue for months to support adherence and cognitive reframing.</li>
-    </ul>
-  </li>
-</ul>
 
 
       <div class="page-break" aria-hidden="true"></div>
@@ -119,14 +127,14 @@ While TRT has been widely promoted and adopted in clinical practice, systematic 
   <i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i> 
   (co-authored with Jonathan W. P. Hazell), outlined the principles of TRT and helped 
   popularize the neurophysiological model, though its clinical effectiveness remains 
-  unsubstantiated by rigorous evidence.
+  unsubstantiated by solid evidence.
 </p>
 <p>
-Each team member at <i>Hyperacusis Guide</i> suffers from some degree of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex physiological reality of severe cases and often dismisses the experiences of those most profoundly affected.
+Each team member at <i>Hyperacusis Guide</i> suffers from some degree of hyperacusis, noxacusis, and tinnitus. Three of us are completely homebound and unable to work, drive a car, or even walk outside. In the early stages of our conditions, each of us attempted to follow the principles of Tinnitus Retraining Therapy (TRT). Not only did these methods fail to bring improvement, but in several cases, they appeared to contribute to further worsening. Despite the widespread promotion of TRT within audiology, we believe the approach does not adequately address the complex reality of severe cases and often dismisses the experiences of those most profoundly affected.
 </p>
 
 <p>
-In his 2004 textbook, <i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i>, Dr. Jastreboff suggests that some patients who do not respond to TRT are "inventing or exaggerating" their symptoms to acquire or maintain disability benefits. On page 138, the book states the following:
+In his 2004 textbook, <i>Tinnitus Retraining Therapy: Implementing the Neurophysiological Model</i>, Dr. Jastreboff suggests that some patients who do not respond to TRT are "inventing or exaggerating" their symptoms to acquire or maintain disability benefits. On page 138, the textbook states the following:
 </p>
 
 <ul>
@@ -146,11 +154,11 @@ At <i>Hyperacusis Guide</i>, we are not aware of a single case in which an indiv
 </p>
 
 <p>
-Unfortunately, because the severity of hyperacusis and tinnitus cannot be measured objectively with a diagnostic test—aside from the Loudness Discomfort Level (LDL) test, which is not only notoriously unreliable but may also be impossible for individuals with catastrophic hyperacusis to undergo safely—and relies entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts", such as Dr. Jastreboff, as there is no objective standard for comparison.
+Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot be measured objectively with a diagnostic test — aside from the Loudness Discomfort Level (LDL) test, which is not only unreliable but may also be impossible for individuals with catastrophic hyperacusis to undergo safely — and relies almost entirely on the patient’s subjective description, it is impossible to definitively prove or disprove an "expert’s" assessment. This makes it difficult to challenge opinions of "experts", such as Dr. Jastreboff, as there is no objective standard for comparison.
 </p>
 
       <p>
-      For a clearer picture of Dr. Jastreboff’s attitude toward his patients, take a look at the series of video excerpts below where he explains, rather candidly, which patients he considers unsuitable for Tinnitus Retraining Therapy (TRT) and dismisses as beyond help. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
+      For a better understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they have ulterior motives such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
         rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has done lasting damage to the advancement of tinnitus and hyperacusis research, setting the field back by at least 20 years.
       </p>
       <p>
@@ -183,15 +191,7 @@ Unfortunately, because the severity of hyperacusis and tinnitus cannot be measur
        <img src="Jastreboff/27.jpeg" class="full-width-image">
        <img src="Jastreboff/28.jpeg" class="full-width-image">
     </p>
-  
-      <div class="page-break" aria-hidden="true"></div>
-      <h1>Cognitive Behavioral Therapy</h1>
-      <p>
-      While cognitive behavioral therapy (CBT) is frequently recommended for individuals with tinnitus or hyperacusis, there is currently no convincing evidence demonstrating that it reliably alleviates the core auditory symptoms. CBT may help some patients cope with stress, anxiety, or the emotional distress associated with these conditions, but it does not address the underlying sensory dysfunction. As such, claims that CBT can directly reduce tinnitus perception or sound sensitivity are not supported by high-quality clinical research.
-      </p>
-
-
-
+ 
 </article>
   </main>
   
