--- a/community.html
+++ b/community.html
@@ -60,7 +60,7 @@
       </P>
       <p>
       <a class="link" href="https://discord.gg/H3MqMv9X" target="_blank" rel="noopener noreferrer">Tinnitus Labs Discord Server</a> —
-      A community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a>—originally developed at the University of Michigan but not yet commercially available. Members also discuss other auditory conditions, such as hyperacusis and noxacusis, and share the latest research.
+      A community of over 1,900 members primarily focused on the treatment of tinnitus using a DIY adaptation of the <a class="link" href="https://www.tinnitushub.com/dr-susan-shore-auricle-questions-answers/" target="_blank" rel="noopener noreferrer">Susan Shore device</a> — originally developed at the University of Michigan but not yet commercially available. Members also discuss other auditory conditions, such as hyperacusis and noxacusis, and share the latest research.
       </p>
 
       
@@ -85,16 +85,16 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Forums</h1>
       <p>
-      When seeking tinnitus and hyperacusis advice on Reddit and other forums, it’s important to remain wary—many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
+      When seeking tinnitus and hyperacusis advice on Reddit and other forums, it’s important to remain wary — many posts are inaccurate or misleading, and inexperienced sufferers can take a single success story as a guarantee, which may lead to unrealistic expectations.
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit - Hyperacusis</a>
+      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit — Hyperacusis</a>
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit - Noxacusis</a>
+      <a class="link" href="https://www.reddit.com/r/hyperacusis/" target="_blank" rel="noopener noreferrer">Reddit — Noxacusis</a>
       </p>
       <p>
-      <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit - Tinnitus</a>
+      <a class="link" href="https://www.reddit.com/r/tinnitus/" target="_blank" rel="noopener noreferrer">Reddit — Tinnitus</a>
       </p>
       <p>
       <a class="link" href="https://www.tinnitustalk.com/" target="_blank" rel="noopener noreferrer">Tinnitus Talk</a>
@@ -103,7 +103,7 @@
       <div class="page-break" aria-hidden="true"></div>
       <h1>Other Sites</h1>
       <p>
-      <a class="link" href="https://hyperacusiscentral.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Central</a> - A collection of personal stories from those affected by hyperacusis, including many accounts of severe and life-altering cases.
+      <a class="link" href="https://hyperacusiscentral.org/" target="_blank" rel="noopener noreferrer">Hyperacusis Central</a> — A collection of personal stories from those affected by hyperacusis, including many accounts of severe and life-altering cases.
       </p>      
       
     </article>
