--- a/tinnitus.html
+++ b/tinnitus.html
@@ -159,7 +159,7 @@ Unfortunately, because the severity of hyperacusis and tinnitus symptoms cannot 
 
       <p>
       For a better understanding of Dr. Jastreboff’s attitude towards tinnitus and hyperacusis sufferers, please take a moment to review the series of video excerpts below where he explains, rather candidly, which patients he feels are unlikely to respond to Tinnitus Retraining Therapy (TRT) — implying that they have ulterior motives such as social attention or financial gain. <a class="link" href="https://youtu.be/11SUmiq3UCU" target="_blank" 
-        rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has done lasting damage to the advancement of tinnitus and hyperacusis research, setting the field back by at least 20 years.
+        rel="noopener noreferrer">The full video can be found here</a>. At <i>Hyperacusis Guide</i>, we contend that Dr. Jastreboff’s approach has caused lasting damage to the advancement of tinnitus and hyperacusis research, possibly setting the field back by a few decades.
       </p>
       <p>
        <img src="Jastreboff/1.jpeg" class="full-width-image">
